--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,5 +1,31 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     background: url('../img/bg.jpg') center center;
     margin: 0;
     padding: 0;
+}
+
+.main-body {
+    padding: 30px;
+    max-width: 1200px;
+
+    .result {
+        border: 5px #FFD81E solid;
+        background-color: #fff;
+        padding: 15px;
+
+        &-name {
+            color: #EC1E06;
+            margin: 0;
+            padding: 0;
+            font-size: 32px;
+            line-height: 1.5;
+            text-align: center;
+        }
+    }
 }
