--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -51,4 +51,110 @@ body {
             }
         }
     }
+
+    .footer {
+        color: #333;
+        font-size: 14px;
+        text-align: right;
+    }
+}
+
+.option-main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, .5);
+    padding: 30px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .2s;
+
+    &.show {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    @at-root {
+        .option-button {
+            width: 100%;
+            font-size: 18px;
+            padding: 10px;
+            color: #fff;
+            background-color: #21a1ba;
+            border: 3px solid #7DC5D4;
+            border-right-color: #0C6472;
+            border-bottom-color: #0C6472;
+            margin-top: 15px;
+        }
+    }
+
+    .option-body {
+        width: 100%;
+        max-width: 1200px;
+        height: 100%;
+        max-height: calc(100vh - 60px);
+        padding: 15px;
+        border: 5px solid #ffd81e;
+        background-color: #fff;
+        margin: auto;
+        overflow-y: scroll;
+
+        .option-main-title {
+            font-size: 24px;
+            text-align: center;
+            color: #EC1E06;
+            margin: 0;
+            line-height: 1.2;
+        }
+
+        .level-select {
+            display: flex;
+            justify-content: space-between;
+
+            .level-input {
+                display: none;
+
+                &.easy:checked+.level-label {
+                    border-color: #ff1c00;
+                }
+
+                &.normal:checked+.level-label {
+                    border-color: #8fb549;
+                }
+
+                &.hard:checked+.level-label {
+                    border-color: #3a431e;
+                }
+
+                &.oni:checked+.level-label {
+                    border-color: #EE098F;
+                }
+            }
+
+            .level-label {
+                background-color: #fff;
+                border: 3px solid #CCC;
+                padding: 10px 15px;
+                font-size: 18px;
+                font-weight: bold;
+            }
+        }
+
+        .level-num {
+            margin: 10px 0;
+
+            &-input {
+                width: 5em;
+                border: 3px solid #ccc;
+                padding: 5px;
+                outline: none;
+
+                &:focus {
+                    border-color: #EC1E06;
+                }
+            }
+        }
+    }
 }
