--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -20,14 +20,29 @@ body {
         background-color: #fff;
         padding: 15px;
         box-shadow: 0 0 5px #999;
+        text-align: center;
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
 
         &-name {
             color: #EC1E06;
-            margin: 0;
-            padding: 0;
             font-size: 32px;
+            line-height: 1.2;
+        }
+
+        &-name-cn {
+            color: #333;
+            font-size: 24px;
             line-height: 1.5;
-            text-align: center;
+        }
+
+        &-level {
+            color: #333;
+            font-size: 18px;
+            line-height: 1.5;
         }
     }
 
