--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('../img/bg.jpg') top center;
+    background: url("../img/bg.jpg") top center;
     margin: 0;
     padding: 0;
 }
@@ -20,11 +20,16 @@ a {
     max-width: 600px;
 
     .result {
-        border: 5px #FFD81E solid;
+        border: 5px #ffd81e solid;
         background-color: #fff;
         padding: 15px;
         box-shadow: 0 0 5px #999;
         text-align: center;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        min-height: 300px;
 
         p {
             margin: 0;
@@ -32,14 +37,14 @@ a {
         }
 
         &-name {
-            color: #EC1E06;
+            color: #ec1e06;
             font-size: 32px;
             line-height: 1.2;
         }
 
         &-name-cn {
             color: #333;
-            font-size: 24px;
+            font-size: 20px;
             line-height: 1.5;
         }
 
@@ -58,7 +63,7 @@ a {
             font-size: 18px;
             padding: 10px;
             color: #fff;
-            background-color: #EC1E06;
+            background-color: #ec1e06;
             border: 3px solid #ffa66b;
             border-right-color: #b53000;
             border-bottom-color: #b53000;
@@ -70,7 +75,7 @@ a {
             }
 
             &[disabled] {
-                opacity: .7;
+                opacity: 0.7;
             }
         }
     }
@@ -88,11 +93,11 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(#000, .5);
+    background-color: rgba(#000, 0.5);
     padding: 30px;
     opacity: 0;
     pointer-events: none;
-    transition: opacity .2s;
+    transition: opacity 0.2s;
 
     &.show {
         opacity: 1;
@@ -106,9 +111,9 @@ a {
             padding: 10px;
             color: #fff;
             background-color: #21a1ba;
-            border: 3px solid #7DC5D4;
-            border-right-color: #0C6472;
-            border-bottom-color: #0C6472;
+            border: 3px solid #7dc5d4;
+            border-right-color: #0c6472;
+            border-bottom-color: #0c6472;
             margin-top: 15px;
         }
     }
@@ -127,7 +132,7 @@ a {
         .option-main-title {
             font-size: 24px;
             text-align: center;
-            color: #EC1E06;
+            color: #ec1e06;
             margin: 0;
             line-height: 1.2;
         }
@@ -140,26 +145,26 @@ a {
             .level-input {
                 display: none;
 
-                &.easy:checked+.level-label {
+                &.easy:checked + .level-label {
                     border-color: #ff1c00;
                 }
 
-                &.normal:checked+.level-label {
+                &.normal:checked + .level-label {
                     border-color: #8fb549;
                 }
 
-                &.hard:checked+.level-label {
+                &.hard:checked + .level-label {
                     border-color: #3a431e;
                 }
 
-                &.oni:checked+.level-label {
-                    border-color: #EE098F;
+                &.oni:checked + .level-label {
+                    border-color: #ee098f;
                 }
             }
 
             .level-label {
                 background-color: #fff;
-                border: 3px solid #CCC;
+                border: 3px solid #ccc;
                 padding: 10px 15px;
                 margin: 10px 0;
                 font-size: 18px;
@@ -177,7 +182,41 @@ a {
                 outline: none;
 
                 &:focus {
-                    border-color: #EC1E06;
+                    border-color: #ec1e06;
+                }
+            }
+        }
+
+        .select-category {
+            .category-list {
+                .cat-item {
+                    display: inline-block;
+                    margin: 0.5em;
+                }
+            }
+            .tips {
+                font-size: 12px;
+                color: #999;
+                margin: 1em 0;
+                line-height: 1.5;
+                text-align: center;
+            }
+            .select-all-cat {
+                display: block;
+                width: 100px;
+                font-size: 14px;
+                padding: 5px;
+                color: #fff;
+                background-color: #ec1e06;
+                border: 3px solid #ffa66b;
+                border-right-color: #b53000;
+                border-bottom-color: #b53000;
+                outline: none;
+                margin: auto;
+
+                &:active {
+                    border-color: #b53000;
+                    background-color: #b53000;
                 }
             }
         }
@@ -190,14 +229,14 @@ a {
             &-input {
                 display: none;
 
-                &:checked+.songlist-selection-label {
-                    border-color: #EC1E06;
+                &:checked + .songlist-selection-label {
+                    border-color: #ec1e06;
                 }
             }
 
             &-label {
                 background-color: #fff;
-                border: 3px solid #CCC;
+                border: 3px solid #ccc;
                 padding: 10px 15px;
                 margin: 10px 0;
                 font-size: 18px;
